maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:23: error: expected class or object definition
def marquageComplet():Boolean = //vérifie si on a marqué toutes les cases
^JediEscaper:38: error: expected class or object definition
def repererSortie() //repère sortie, y met 0
^JediEscaper:39: error: expected class or object definition
{
^JediEscaper:52: error: expected class or object definition
def repererCasesAdjacentes(X:Int,Y:Int):Array[Boolean]= //repère cases adjacentes
^